@@ -363,6 +363,9 @@
   border-radius: 8px;
   font-size: 0.85rem;
 }
+.yt-vid-like-badge {
+  display: inline-flex;
+}
 .yt-vid-comments-badge {
   background: rgba(255,255,255,0.02);
   border: 1px solid rgba(255,255,255,0.02);
