@@ -165,6 +165,9 @@ Feb 07, 2026
 > Added subscriber function on yt channel when subscriber click, like "sub_confirmation=1"
 > Added bg img from yt cover on yt header description with about 80% darker and 30% opacity
 
+feb 08, 2026
+> Added how many likes on total likes and on each videos
+
 To-Do Task:
 > Fix on mobile bug on auto out when touch on menu-toggle due to close on outside of the left sidebar
 > Fix comment section not hide footer and auto scroll when click chat on jaymantrix AI on script.js
